feat(订单管理): 增强订单详情显示功能并添加订单删除功能
- 为管理员界面添加刷新和删除订单按钮
- 改进所有用户角色的订单详情对话框显示格式
- 添加详细的图书信息和格式化输出
- 实现订单删除功能，仅允许删除已取消或已完成订单
- 更新README添加IDE部署指南